# ml

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml  paper-ci.yml  publish-rust.yml  publish.yml  r-ci.yml
al/: README.md
al/benchmarks/: bench_landscape.py  bench_openml.py  bench_vs_sklearn.py  compare_xgb.py  focused_bench.py  results_homepage.md  results_vs_sklearn.json
datasets/: README.md  churn.csv  fraud.csv  iris_binary.csv  mtcars_regression.csv  toxicity.csv
datasets/expected/: iris_binary_seed42.json  iris_multiclass_seed42.json  mtcars_seed42.json
ml.Rcheck/: 00install.out  ml-Ex.R  ml-Ex.Rout  ml-Ex.timings
ml.Rcheck/ml/: DESCRIPTION  INDEX  LICENSE  NAMESPACE
ml.Rcheck/tests/: testthat.Rout
papers/: README.md
papers/grammar/: paper.qmd  refs.bib
papers/landscape/: Dockerfile  compile_claims.py  paper.qmd  refs.bib  (+4 more)
python/: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  safe_test_runner.py
python/benchmarks/: README.md  _bench_utils.py  baseline_functions.json  bench_compare.py  bench_comprehensive.py  bench_dev.py  bench_engines.py  bench_fair.py  bench_functions.py  bench_parity_bridge.py  bench_vs_sklearn.py  bench_workflows.py  optimized_functions.json  optimized_workflows.json  parity_check.py
python/ml/: __init__.py  _compat.py  _config.py  _deprecation.py  _elastic_net.py  _engines.py  _help.py  _knn.py  _linear.py  _logging.py  _logistic.py  _naive_bayes.py  _normalize.py  _provenance.py  _rust.py  _score.py  _scoring.py  _stats.py  _transforms.py  _types.py  assess.py  bin.py  blend.py  calibrate.py  check.py  cluster.py  compare.py  cv.py  deflate.py  drift.py  embed.py  encode.py  enough.py  evaluate.py  explain.py  fit.py  impute.py  interact.py  io.py  leak.py  (+23 more)
python/ml/data/: __init__.py
python/notebooks/: 01_first_model.ipynb  02_explore.ipynb  03_real_world.ipynb  04_customize.ipynb  quickstart.ipynb
python/tests/: conftest.py  test_adversarial.py  test_adversarial_edge_cases.py  test_adversarial_guards.py  test_adversarial_guards_wave2.py  test_assess.py  test_audit_a_fingerprint.py  test_audit_b_dispatch.py  test_balance.py  test_benchmark_correctness.py  test_bigdata.py  test_bin.py  test_blend.py  test_calibrate.py  test_chain1_engine_mastery.py  test_check_data.py  test_cluster.py  test_compare.py  test_config.py  test_cv.py  test_cv_falsification.py  test_cv_parity.py  test_cv_statistical.py  test_deflate.py  test_drift.py  test_edge_cases.py  test_encode.py  test_encode_datetime.py  test_engine_mastery.py  test_enough.py  test_evaluate.py  test_explain.py  test_fit.py  test_grammar_conformance.py  test_hardening.py  test_harvest.py  test_help.py  test_impute.py  test_integration.py  test_interact.py  (+49 more)
r/: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  NEWS.md  README.md  configure  configure.win  cran-comments.md
r/R/: cv.R  (+39 more)
(+265 files in other folders)
